fix readability offcanvas

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -102,7 +102,7 @@ h1, h2, h3, h4, h5, a {
 }
 .offcanvas {
   background: rgba(255, 255, 255, 0.5) !important;
-  backdrop-filter: blur(15px);
+  backdrop-filter: blur(20px);
     -webkit-backdrop-filter: blur(15px);
 
 }
@@ -119,7 +119,7 @@ html, body {
 .table-bordered td {
   border-color: var(--hero-color) !important;
 }
-/* Frosted background for tables */
+/* Frosted background for tables ************************************************************ **********************************************/
 .table-responsive,
 .table {
   background: rgba(255, 255, 255, 0.3);   /* slightly stronger opacity */
@@ -142,7 +142,7 @@ html, body {
 
 
 
-/* Inactive nav links: frosted glass look */
+/* Inactive nav links: frosted glass look ************************************************************ **********************************************/
 .nav .nav-link {
   background: rgba(255, 255, 255, 0.2);   /* translucent layer */
   backdrop-filter: blur(10px);
@@ -156,7 +156,7 @@ html, body {
   color: black;
 }
 
-/* Active nav link: solid hero color, no blur */
+/* Active nav link: solid hero color, no blur ************************************************************ **********************************************/
 .nav .nav-link.active,
 .active-link {
   background-color: var(--hero-color) !important;
@@ -165,13 +165,13 @@ html, body {
   -webkit-backdrop-filter: none;
 }
 
-/* Playoff div shape adjustments */
+/* Playoff div shape adjustments ************************************************************ **********************************************/
 .half-rounded-right {
   border-top-right-radius: 15px;
   border-bottom-right-radius: 15px;
 }
 
-/* Active indicator for playoff & Score carousels */
+/* Active indicator for playoff & Score carousels ************************************************************ **********************************************/
 .carousel-indicators button {
   backdrop-filter: blur(5px);
   -webkit-backdrop-filter: blur(5px);
@@ -185,7 +185,7 @@ html, body {
 
 
 
-/* FROSTED GLASS FOR FORM INPUTS */
+/* FROSTED GLASS FOR FORM INPUTS ***************************************************************************** **********************************************/
 .form-control,
 .form-select {
   background: rgba(255, 255, 255, 0.2) !important;   /* translucent background */
@@ -212,6 +212,7 @@ html, body {
 .form-floating {
   background: transparent !important;
 }
+/* FROSTED GLASS FOR FORM INPUTS ***************************************************************************** **********************************************/
 
 
 .finals-card, .semifinals-card {
@@ -219,14 +220,14 @@ html, body {
 }
 
 
-/* TICKER */
+/* TICKER  ********************************************************************************************* **********************************************/
 .score-ticker {
   position: fixed;
   bottom: 0;
   left: 0;
   width: 100%;
   height: 12vh;
-  background: rgba(255,255,255,0.2);
+  background: rgba(255,255,255,0.1);
   backdrop-filter: blur(8px);
   -webkit-backdrop-filter: blur(8px);
   border-top: 2px solid var(--hero-color);
@@ -234,15 +235,13 @@ html, body {
   display: flex;
   align-items: center;
 }
-
 .ticker-content {
   display: flex;
   align-items: center;
   white-space: nowrap;
   padding-left: 100%;
-  animation: ticker-scroll 15s linear infinite;
+  animation: ticker-scroll 18s linear infinite;
 }
-
 .ticker-player {
   display: flex;
   flex-direction: column;
@@ -254,17 +253,17 @@ html, body {
   padding-left: 10px;
   padding-right: 10px;
   margin: 0px 10px;
-
 }
 @keyframes ticker-scroll {
   0%   { transform: translateX(0); }
   100% { transform: translateX(-100%); }
 }
+/* TICKER  ********************************************************************************************* **********************************************/
 
 
 
 
-/* BOUNCING ANIMATION */
+/* BOUNCING ANIMATION ********************************************************************************************* ***************************************/
 @keyframes bounce {
   0%, 20%, 50%, 80%, 100% {
     transform: translateY(0);
@@ -276,10 +275,10 @@ html, body {
     transform: translateY(-6px);
   }
 }
-
 .bounce {
   animation: bounce 2s infinite;
 }
+/* BOUNCING ANIMATION ********************************************************************************************* **********************************************/
 
 
 .finals-background {
